insecao do header e navigator

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,5 @@
-<app-navigator></app-navigator>
+<div class="container-full banner-bg">
+    <div class="container">
+            <app-navigator></app-navigator>
+        </div>
+    </div>
