--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,3 +43,28 @@ a{
 .padding-tb{
     padding: 10px 0;
 }
+/*logotipo*/
+.section-logo{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.logo{
+    width: 150px;
+    height: 150px;
+    padding: 2%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+    border-radius: 50%;
+    margin-top: -100px;
+    border:1px solid #b8b8b8;
+}
+
+
+.logo img{
+    width: 70%;
+    height: 0 auto;
+}
