--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,14 @@
-<div class="container-full banner-bg">
-    <div class="container">
-            <app-navigator></app-navigator>
-        </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+        
+        <img class="img" src="../../../../../assets/images/logotipos.png" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <app-navigator></app-navigator>
     </div>
+  </nav>
+
+<app-banner></app-banner>
