--- a/src/app/servicos/servicos.component.html
+++ b/src/app/servicos/servicos.component.html
@@ -1,4 +1,4 @@
-<div class="container-full">
+<div class="container-full services">
     <div class="container padding-tb">
         <div class="section-service">
             <div class="title-service">
