--- a/src/app/shared/components/navigator/navigator.component.html
+++ b/src/app/shared/components/navigator/navigator.component.html
@@ -1,9 +1,16 @@
-<div class="navigator">
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Quem Somos</a></li>
-        <li><a href="#">Serviços</a></li>
-        <li><a href="#">Projetos</a></li>
-        <li><a href="#">Contato</a></li>
+
+    <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
     </ul>
-</div>
+
