ajustes no header, estilizacao, estudo do codigo

--- a/src/app/shared/components/banner/banner.component.scss
+++ b/src/app/shared/components/banner/banner.component.scss
@@ -3,3 +3,11 @@
     float: left;
     position: relative;
 }
+.container{
+    z-index: 99999px;
+    color: blue;
+}
+.d-md-block {
+    color: cadetblue;
+    text-align: right;
+}
