--- a/src/app/shared/components/banner/banner.component.html
+++ b/src/app/shared/components/banner/banner.component.html
@@ -1,16 +1,29 @@
-<div class="container-full bg-banner">
+
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
+
           <div class="carousel-item active">
             <img class="d-block w-100" src="../../../assets/images/banner.jpg" alt="First slide">
+            <div class="row">
+              <div class="md-6">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Lorem ipsum dolor sit amet</h5>
+                  <p>Lorem ipsum dolor sit amet</p>
+                </div>
+              </div>
+            </div>
           </div>
+
           <div class="carousel-item">
             <img class="d-block w-100" src="../../../assets/images/banner.jpg" alt="Second slide">
           </div>
+
           <div class="carousel-item">
             <img class="d-block w-100" src="../../../assets/images/banner.jpg" alt="Third slide">
           </div>
+
         </div>
+
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
@@ -20,4 +33,3 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-</div>
