--- a/src/app/shared/components/navigator/navigator.component.scss
+++ b/src/app/shared/components/navigator/navigator.component.scss
@@ -22,9 +22,18 @@
     font-weight: 500;
 }*/
 
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&display=swap');
 
 .navbar-nav {
     margin: auto;
     background-color: #f8f8f8;
     justify-content: right;
+}
+.nav-link{
+    margin-right: 40px;
+}
+.nav-item{
+    color: #000;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 16px;
 }
