implements header and banner

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,7 +50,9 @@ a{
     justify-content: center;
 }
 
-.logo{
+//imagem esta em logotipo.components.ts/Hmtl 
+/*
+.logo { 
     width: 150px;
     height: 150px;
     padding: 2%;
@@ -62,7 +64,7 @@ a{
     margin-top: -100px;
     border:1px solid #b8b8b8;
 }
-
+*/
 
 .logo img{
     width: 70%;
