--- a/src/app/servicos/servicos.component.html
+++ b/src/app/servicos/servicos.component.html
@@ -5,6 +5,80 @@
                 <h2>O que fazemos?</h2>
                 <h3>Consultoria, Projetos e Estudos </h3>
             </div>
+              <section class="wrapper">
+                <div class="container">               
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="card text-white card-has-bg click-col" style="background-image:url('https://source.unsplash.com/600x900/?tech,street');">
+                                <img class="card-img d-none" src="https://source.unsplash.com/600x900/?tech,street" alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
+                                <div class="card-img-overlay d-flex flex-column">
+                                    <div class="card-body">
+                                        <small class="card-meta mb-2">Mais Sustentabilidade</small>
+                                        <h4 class="card-title mt-0 "><a class="text-white" herf="#">Lorem ipsum dolor sit amet</a></h4> 
+                                    <div class="descricao">                                    
+                                        <ul>
+                                            <li><p>Natureza</p></li>
+                                            <li><p>cuidados </p></li>
+                                            <li><p>lorem ipsum dolor sit amet</p></li>
+                                            <li><p>apenas um teste </p></li>
+                                            <li><p>outro teste para testar se uma linha</p></li>
+                                        </ul>
+                                    </div>
+                                        <small><i class="far fa-clock"></i>Desde 1985</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card text-white card-has-bg click-col" style="background-image:url('https://source.unsplash.com/600x900/?tree,nature');">
+                                <img class="card-img d-none" src="https://source.unsplash.com/600x900/?tree,nature" alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
+                                <div class="card-img-overlay d-flex flex-column">
+                                    <div class="card-body">
+                                        <small class="card-meta mb-2">inovaçao e criatividade</small>
+                                        <h4 class="card-title mt-0 "><a class="text-white" herf="#">Apenas um teste de escrita para ver como vai ficar dentro do card</a></h4> 
+                                        <small><i class="far fa-clock"></i>Natureza</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> 
+                        <div class="col-md-4">
+                            <div class="card text-white card-has-bg click-col" style="background-image:url('https://source.unsplash.com/600x900/?computer,design');">
+                                <img class="card-img d-none" src="https://source.unsplash.com/600x900/?computer,design" alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
+                                <div class="card-img-overlay d-flex flex-column">
+                                    <div class="card-body">
+                                        <small class="card-meta mb-2">Em alta no mercado 2022</small>
+                                        <h4 class="card-title mt-0 "><a class="text-white" herf="#">Lorem ipsum dolor sit amet</a></h4> 
+                                        <small><i class="far fa-clock"></i>Saiba mais!</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>     
+                    </div>
+                </div>
+              </section>
+              
+           
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            <!--
             <div class="content-service">
                 <div class="box-service">
                     <img src="">
@@ -31,6 +105,7 @@
                     <small><a href="#">Saiba Mais</a></small>
                 </div>
             </div>
+            -->
             <div class="more-service">
                 
 
