--- a/src/app/shared/components/logotipo/logotipo.component.html
+++ b/src/app/shared/components/logotipo/logotipo.component.html
@@ -1,5 +1,6 @@
-
+            <!--
             <div class="logo">
-                <img [src]="variavel">
+                <img [src]="imagemLogotipo">
             </div>
+            -->
         
