alteraçao de servicoes, ajuste de imagem e cores

--- a/src/app/servicos/servicos.component.html
+++ b/src/app/servicos/servicos.component.html
@@ -8,7 +8,7 @@
               <section class="wrapper">
                 <div class="container">               
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-12">
                             <div class="card text-white card-has-bg click-col" style="background-image:url('https://source.unsplash.com/600x900/?tech,street');">
                                 <img class="card-img d-none" src="https://source.unsplash.com/600x900/?tech,street" alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
                                 <div class="card-img-overlay d-flex flex-column">
@@ -29,19 +29,22 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-6">
                             <div class="card text-white card-has-bg click-col" style="background-image:url('https://source.unsplash.com/600x900/?tree,nature');">
                                 <img class="card-img d-none" src="https://source.unsplash.com/600x900/?tree,nature" alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
                                 <div class="card-img-overlay d-flex flex-column">
                                     <div class="card-body">
                                         <small class="card-meta mb-2">inovaçao e criatividade</small>
                                         <h4 class="card-title mt-0 "><a class="text-white" herf="#">Apenas um teste de escrita para ver como vai ficar dentro do card</a></h4> 
+                                        <div class="descricao">                                    
+                                            <p>Lorem ipsum dolor sit amet, lorem ipsum dolor sit amet dolor</p>
+                                        </div>
                                         <small><i class="far fa-clock"></i>Natureza</small>
                                     </div>
                                 </div>
                             </div>
                         </div> 
-                        <div class="col-md-4">
+                        <div class="col-md-6">
                             <div class="card text-white card-has-bg click-col" style="background-image:url('https://source.unsplash.com/600x900/?computer,design');">
                                 <img class="card-img d-none" src="https://source.unsplash.com/600x900/?computer,design" alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
                                 <div class="card-img-overlay d-flex flex-column">
@@ -56,74 +59,21 @@
                     </div>
                 </div>
               </section>
-              
-           
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            <!--
-            <div class="content-service">
-                <div class="box-service">
-                    <img src="">
-                    <h3>Estudo de Tratamento de Água, Efluentes e Reuso</h3>
-                    <p>Concepção, Projeto básico e detalhado, partida, comissionamento,
-                        operação assistida e treinamento 
-                    </p>
-                    <small><a href="#">Saiba Mais</a></small>
-                </div>
-                <div class="box-service">
-                    <img src="">
-                    <h3>Licenciamento Ambiental</h3>
-                    <p>LP, LI, LO, MCE, PAE, Análise de Risco, CADRI, PGR
-                        PGRS
-                    </p>
-                    <small><a href="#">Saiba Mais</a></small>
-                </div>
-                <div class="box-service">
-                    <img src="">
-                    <h3>Engenharia de processos industriais</h3>
-                    <p>Fluxograma de processos, fluxograma de engenharia e 
-                        dimensionamento de equipamentos
-                    </p>
-                    <small><a href="#">Saiba Mais</a></small>
-                </div>
-            </div>
-            -->
-            <div class="more-service">
-                
-
-            </div>
         </div>
     </div>
 </div>
 
-<div class="container-full" style="background: #29d9c2;">
+
+C<div class="container-full" style="background: #ffffff;">
     <div class="container padding-tb">
         <div class="section-qs">
             <div class="title-qs">
                 <h2>Quem Somos ?</h2>
-                <h3>Lorem ipsum sum dollor ipsum sum dollor </h3>
+                <h3>Lorem ipsum dolor sit amet</h3>
             </div>
             <div class="content-qs">
                 <div class="box-qs1">
-                    <img src="./assets/images/sucesso.jpg">
+                    <img src="./assets/images/sucesso.jpg" style="width: 800px;">
                 </div>
                 <div class="box-qs2">
                     <div class="description">
