--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-header></app-header>
 <app-logo></app-logo>
 <app-servicos></app-servicos>
+<app-quem-somos></app-quem-somos>
+<app-project></app-project>
+<app-footer></app-footer>
+
