--- a/src/app/components/quem-somos/quem-somos.component.scss
+++ b/src/app/components/quem-somos/quem-somos.component.scss
@@ -40,4 +40,8 @@
     background: #f8f8f8;
     opacity: 0.9;
     margin: 52px 0 0 -180px;
+    border-radius: 10px;
+}
+.container-full{
+    background-color:cadetblue;
 }
