--- a/src/app/servicos/servicos.component.html
+++ b/src/app/servicos/servicos.component.html
@@ -8,7 +8,19 @@
               <section class="wrapper">
                 <div class="container">               
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-12">
+                            <div class="card text-white card-has-bg click-col" style="background-image:url('https://source.unsplash.com/600x900/?tree,nature');">
+                                <img class="card-img d-none" src="https://source.unsplash.com/600x900/?tree,nature" alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
+                                <div class="card-img-overlay d-flex flex-column">
+                                    <div class="card-body">
+                                        <small class="card-meta mb-2">inovaçao e criatividade</small>
+                                        <h4 class="card-title mt-0 "><a class="text-white" herf="#">Apenas um teste de escrita para ver como vai ficar dentro do card</a></h4> 
+                                        <small><i class="far fa-clock"></i>Natureza</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> 
+                        <div class="col-6">
                             <div class="card text-white card-has-bg click-col" style="background-image:url('https://source.unsplash.com/600x900/?tech,street');">
                                 <img class="card-img d-none" src="https://source.unsplash.com/600x900/?tech,street" alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
                                 <div class="card-img-overlay d-flex flex-column">
@@ -29,19 +41,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
-                            <div class="card text-white card-has-bg click-col" style="background-image:url('https://source.unsplash.com/600x900/?tree,nature');">
-                                <img class="card-img d-none" src="https://source.unsplash.com/600x900/?tree,nature" alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
-                                <div class="card-img-overlay d-flex flex-column">
-                                    <div class="card-body">
-                                        <small class="card-meta mb-2">inovaçao e criatividade</small>
-                                        <h4 class="card-title mt-0 "><a class="text-white" herf="#">Apenas um teste de escrita para ver como vai ficar dentro do card</a></h4> 
-                                        <small><i class="far fa-clock"></i>Natureza</small>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> 
-                        <div class="col-md-4">
+                        <div class="col-6">
                             <div class="card text-white card-has-bg click-col" style="background-image:url('https://source.unsplash.com/600x900/?computer,design');">
                                 <img class="card-img d-none" src="https://source.unsplash.com/600x900/?computer,design" alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
                                 <div class="card-img-overlay d-flex flex-column">
@@ -56,94 +56,28 @@
                     </div>
                 </div>
               </section>
-              
-           
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            <!--
-            <div class="content-service">
-                <div class="box-service">
-                    <img src="">
-                    <h3>Estudo de Tratamento de Água, Efluentes e Reuso</h3>
-                    <p>Concepção, Projeto básico e detalhado, partida, comissionamento,
-                        operação assistida e treinamento 
-                    </p>
-                    <small><a href="#">Saiba Mais</a></small>
-                </div>
-                <div class="box-service">
-                    <img src="">
-                    <h3>Licenciamento Ambiental</h3>
-                    <p>LP, LI, LO, MCE, PAE, Análise de Risco, CADRI, PGR
-                        PGRS
-                    </p>
-                    <small><a href="#">Saiba Mais</a></small>
-                </div>
-                <div class="box-service">
-                    <img src="">
-                    <h3>Engenharia de processos industriais</h3>
-                    <p>Fluxograma de processos, fluxograma de engenharia e 
-                        dimensionamento de equipamentos
-                    </p>
-                    <small><a href="#">Saiba Mais</a></small>
-                </div>
-            </div>
-            -->
-            <div class="more-service">
-                
-
-            </div>
         </div>
     </div>
 </div>
 
-<div class="container-full" style="background: #29d9c2;">
-    <div class="container padding-tb">
-        <div class="section-qs">
-            <div class="title-qs">
-                <h2>Quem Somos ?</h2>
-                <h3>Lorem ipsum sum dollor ipsum sum dollor </h3>
-            </div>
-            <div class="content-qs">
-                <div class="box-qs1">
-                    <img src="./assets/images/sucesso.jpg">
-                </div>
-                <div class="box-qs2">
-                    <div class="description">
-                        <h2><i class="fas fa-leaf"></i> Daniela Telles</h2>
-                        <p>Engenheira Química formada pela UFU (Universidade
-                            Federal de Uberlândia). </p>
-                        <p>Pós graduada em Engenharia de Controle da Poluição Ambiental pela Faculdade de Saúde Pública da USP. Mestranda em
-                            Saúde, Ambiente e Sustentabilidade pela Faculdade de Saúde Pública -USP.</p>
-                        <p>Possui sólidos conhecimentos na elaboração de estudos de viabilidade
-                            técnica e econômica, seleção de tecnologia nacional e importada,
-                            adequação de estações ao Conama 357, 430, Lei Estadual, desenvolvimento
-                            de novas estações, obtidos através da participação em projetos de
-                            construção de ETE e ETA de empresas nacionais e multinacionais, dos
-                            setores papeleiro, químico, farmacêutico, energia, bebidas, alimentos e
-                            petroquímico. </p>
-                        <p>Palestrante em congressos e cursos técnicos de grande
-                            porte sobre o tema sustentabilidade e meio ambiente.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
