--- a/src/app/shared/components/banner/banner.component.html
+++ b/src/app/shared/components/banner/banner.component.html
@@ -1,14 +1,12 @@
 
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-
-          <div class="carousel-item active">
+          <div class="carousel-item  active">
             <img class="d-block w-100" src="../../../assets/images/banner.jpg" alt="First slide">
             <div class="row">
-              <div class="md-6">
+              <div class="col-12">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Lorem ipsum dolor sit amet</h5>
-                  <p>Lorem ipsum dolor sit amet</p>
+                  <h5>Lorem ipsum Dolor sit amet, lorem ipsum dolor sit amet, lorem ipsum</h5>
                 </div>
               </div>
             </div>
@@ -28,6 +26,7 @@
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
+
         <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
