--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,7 +7,7 @@
     justify-content: flex-end;
     float: right;
     position: fixed;
-    background:#fff;
+    background:rgb(255, 255, 255);
     height: 80px;
     z-index: 99999;
 }
@@ -20,8 +20,11 @@
     justify-content: end;
 } 
 .img1 {
-    width: 120px;
-    height: 130px;
+    width: 100px;
+    height: 100px;
     margin-left: 180px;
     padding: 10px;
+}
+.navbar-light{
+    height: 115px;
 }
