--- a/src/app/servicos/servicos.component.scss
+++ b/src/app/servicos/servicos.component.scss
@@ -16,7 +16,7 @@
     height: 200px;
 }
 .section-service .title-service h2{
-    color: #29d9c2;
+    color: #485c88;
 }
 .section-service .title-service h3{
     color: #909090;
@@ -128,11 +128,10 @@
         box-shadow: 0 0 5px -2px rgba(0,0,0,0.3);
         background-size:130%;
         transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-    
         .card-img-overlay {
             transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
             background: rgb(35,79,109);
-        background: linear-gradient(0deg, rgba(4,69,114,0.5) 0%, rgba(4,69,114,1) 100%);
+        background: linear-gradient(0deg, rgba(28, 53, 82, 0.5) 0%, rgb(42, 98, 136) 100%);
             }
         }
     }
@@ -163,6 +162,21 @@
     background: linear-gradient(0deg, rgba(36, 81, 110, 0.379) 0%, rgba(69,95,113,1) 100%);
     } 
 }
+.col-12 {
+    height:480px !important;
+    background-color: #f8f8f8;
+}
+.geral {
+     display: flex;
+     padding:5px;
+     margin: 5px;
+}
+.descricao_geral, p {
+    color: rgb(56, 58, 58) !important; 
+    margin-left: 8px;
+}
+
+
 
 
 
