alteração no footer

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -173,7 +173,7 @@
                                         <div class="input-group-prepend">
                                             <div class="input-group-text"><i class="fa fa-comment text-info"></i></div>
                                         </div>
-                                        <textarea class="form-control" placeholder="enviei sua mensagem" required></textarea>
+                                        <textarea class="form-control" placeholder="enviar sua mensagem" required></textarea>
                                     </div>
                                 </div>
 
