--- a/src/app/servicos/servicos.component.scss
+++ b/src/app/servicos/servicos.component.scss
@@ -78,12 +78,7 @@
 
 //Card
 
-@import url('https://fonts.googleapis.com/css2?family=Padauk&display=swap'); 
-
-    body {
-        background-color:#FCBF49;
-    }
-    .wrapper{margin:10vh}
+    .wrapper{margin:0 0 10vh 0}
 
     // Informaçoes do card
 
