--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -15,3 +15,15 @@
         align-items: center;
     }
 }
+.social-media{
+    font-size: 25px;
+}
+.icon {
+    margin: 5px 10px;
+    color: #8ba6c4;
+    transition: 0.5s all;
+}
+.icon:hover {
+    color: #485c88;
+    transition: 0.5s all;
+}
