--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,18 +7,10 @@
     justify-content: flex-end;
     float: right;
     position: fixed;
-    background:rgb(255, 255, 255);
+    background:#fff;
     height: 80px;
     z-index: 99999;
 }
-.navbar-expand-lg {
-    background-color: black;
-}
-.navbar-expand-lg .navbar-collapse {
-    display: flex !important;
-    flex-basis: auto;
-    justify-content: end;
-} 
 .img1 {
     width: 100px;
     height: 100px;
