--- a/src/app/shared/components/navigator/navigator.component.scss
+++ b/src/app/shared/components/navigator/navigator.component.scss
@@ -1,39 +1,5 @@
 
-/*.navigator ul {
-    width: 100%;
-    list-style: none;
-    display: flex;
-    justify-content: end;
-}
-
-.navigator ul li {
-    padding: 5px 25px;
-    float: left;
-}
-
-.navigator ul li a {
-    color: #4682B4;
-    font-size: 20px;
-    font-weight: 300;
-    text-decoration: none;
-}
-
-.navigator ul li:hover a {
-    font-weight: 500;
-}*/
-
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&display=swap');
-
-.navbar-nav {
-    margin: auto;
-    background-color: #f8f8f8;
-    justify-content: right;
-}
-.nav-link{
-    margin-right: 40px;
-}
-.nav-item{
-    color: #000;
-    font-family: 'Nunito Sans', sans-serif;
-    font-size: 16px;
+.img1 {
+    width: 100px;
+    height: 0 auto;
 }
