ajustes em geral, como: header, footer, services

--- a/src/app/components/quem-somos/quem-somos.component.html
+++ b/src/app/components/quem-somos/quem-somos.component.html
@@ -7,7 +7,7 @@
             </div>
             <div class="content-qs">
                 <div class="box-qs1">
-                    <img src="./assets/images/sucesso.jpg" style="height: 570px;">
+                    <img src="./assets/images/sucesso.jpg">
                 </div>
                 <div class="box-qs2">
                     <div class="description">
