--- a/src/app/servicos/servicos.component.html
+++ b/src/app/servicos/servicos.component.html
@@ -1,5 +1,5 @@
-<div class="container-full services">
-    <div class="container padding-tb">
+<div class="container-full">
+    <div class="container">
         <div class="section-service">
             <div class="title-service">
                 <h2>O que fazemos?</h2>
