--- a/src/app/shared/components/project/project.component.html
+++ b/src/app/shared/components/project/project.component.html
@@ -1,52 +1,74 @@
 <div class="container-full">
-    <div class="container padding-tb">
-        <div class="section-projeto">
-            <div class="title-pj">
-                <h2>Project</h2>
-                <h3>Lorem ipsum dolor sit amet</h3>
-            </div>
-            <div class="content-pj">
-                <div class="box-pj">
-                    <img src="https://cn.i.cdn.ti-platform.com/content/21/showpage/regular-show/pt/regularshow-200x200.png">
-                </div>
-                <div class="box-pj">
-                    <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
-                </div>
-                <div class="box-pj">
-                    <img src="https://cn.i.cdn.ti-platform.com/content/21/showpage/regular-show/pt/regularshow-200x200.png">
-                </div>
-                <div class="box-pj">
-                    <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
-                </div>
-            </div>
-            <div class="content-pj">
-                <div class="box-pj">
-                    <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
-                </div>
-                <div class="box-pj">
-                    <img src="https://cn.i.cdn.ti-platform.com/content/21/showpage/regular-show/pt/regularshow-200x200.png">
-                </div>
-                <div class="box-pj">
-                    <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
-                </div>
-                <div class="box-pj">
-                    <img src="https://cn.i.cdn.ti-platform.com/content/21/showpage/regular-show/pt/regularshow-200x200.png">
-                </div>
-            </div>
-            <div class="content-pj">
-                <div class="box-pj">
-                    <img src="https://cn.i.cdn.ti-platform.com/content/21/showpage/regular-show/pt/regularshow-200x200.png">
-                </div>
-                <div class="box-pj">
-                    <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
-                </div>
-                <div class="box-pj">
-                    <img src="https://cn.i.cdn.ti-platform.com/content/21/showpage/regular-show/pt/regularshow-200x200.png">
-                </div>
-                <div class="box-pj">
-                    <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
-                </div>
-            </div>
+<div class="container container-project">
+   <div class="title">
+      <h2>Project</h2>
+      <h4>Lorem ipsum dolor sit amet</h4>
+   </div>
+    <div class="row">
+        <div class="col-3">
+           <div class="teste1">
+              <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+           </div>
         </div>
+        <div class="col-3">
+         <div class="teste1">
+            <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+         </div>
+      </div>
+      <div class="col-3">
+         <div class="teste1">
+            <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+         </div>
+      </div>
+      <div class="col-3">
+         <div class="teste1">
+            <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+         </div>
+      </div>
     </div>
+    <div class="row">
+      <div class="col-3">
+         <div class="teste1">
+            <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+         </div>
+      </div>
+      <div class="col-3">
+       <div class="teste1">
+          <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+       </div>
+    </div>
+    <div class="col-3">
+      <div class="teste1">
+         <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+      </div>
+   </div>
+   <div class="col-3">
+      <div class="teste1">
+         <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+      </div>
+   </div>
+  </div>
+  <div class="row">
+   <div class="col-3">
+      <div class="teste1">
+         <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+      </div>
+   </div>
+   <div class="col-3">
+    <div class="teste1">
+       <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+    </div>
+ </div>
+ <div class="col-3">
+   <div class="teste1">
+      <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+   </div>
+</div>
+<div class="col-3">
+   <div class="teste1">
+      <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+   </div>
+</div>
+</div>
+</div>
 </div>
