--- a/src/app/servicos/servicos.component.scss
+++ b/src/app/servicos/servicos.component.scss
@@ -1,14 +1,4 @@
-.services{
-    
-    float: left;
-    position: relative;
-}
-.section-service{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
-.section-service .title-service{
+.title-service{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,67 +12,13 @@
     color: #909090;
 }
 
-
-
-.section-service .content-service{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    margin: 20px 0 40px;
-}
-
-.section-service .content-service .box-service{
-    width: 25%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 20px;
-}
-
-.section-service .content-service .box-service h3{
-    color: #29d9c2;
-    text-transform: uppercase;
-}
-.section-service .content-service .box-service small a{
-    color: #909090;
-    text-transform: uppercase;
-}
-.more-service{
-    width: 100%;
-    float: left;
-    position: relative;
-}
-.col {
-    background-color: rgb(0, 0, 0);
-    border:4px solid;
-    margin: 20px;
-    color:rgb(121, 117, 116);
-}
-.col-12{
-    background-color: brown;
-    color: cadetblue;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
 //Card
 
     .wrapper{margin:0 0 10vh 0}
 
     // Informaçoes do card
 
-.card {
+.card{
     border: none;
     transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
     overflow:hidden;
@@ -134,39 +70,39 @@
         background: none;
         border-top: none;
         .media {
-        img {
+        img{
             border:solid 3px rgba(234,95,0,0.3);
         }
         }
     }
-    .card-meta {color:orange}
+    .card-meta{color:orange}
     .card-body { 
         transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
     }
-    &:hover {
-        .card-body {
+    &:hover{
+        .card-body{
         margin-top:30px;
         transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
         }
     cursor: pointer;
     transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
     }
-    .card-img-overlay {
+    .card-img-overlay{
         transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
     background: rgb(35,79,109);
     background: linear-gradient(0deg, rgba(36, 81, 110, 0.379) 0%, rgba(69,95,113,1) 100%);
     } 
 }
-.col-12 {
-    height:480px !important;
+.col-12{
+    height:480px;
     background-color: #f8f8f8;
 }
-.geral {
+.geral{
      display: flex;
      padding:5px;
      margin: 5px;
 }
-.descricao_geral, p {
+.descricao_geral, p{
     color: rgb(56, 58, 58) !important; 
     margin-left: 8px;
 }
