--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,3 +1,4 @@
+<section id="footer" class="container-full">
 <!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted">
     <!-- Section: Social media -->
@@ -96,7 +97,7 @@
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
-
+</section>
 
 
   <!-- Modal -->
@@ -133,7 +134,7 @@
                                         <div class="input-group-prepend">
                                             <div class="input-group-text"><i class="fa fa-user text-info"></i></div>
                                         </div>
-                                        <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome e Apellido" required>
+                                        <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome:" required>
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -162,8 +163,6 @@
                         </div>
                     </form>
                     <!--Form with header-->
-
-
                 </div>
 	</div>
 </div>
