--- a/src/app/shared/components/navigator/navigator.component.html
+++ b/src/app/shared/components/navigator/navigator.component.html
@@ -1,28 +1,30 @@
-
-  <div class="container d-flex  justify-content-between">
-    <div class="row">
-      <div class="col-md-12" style="background-color: #000;">
-        Lorem ipsum dolor sit amet
-      </div>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+<div id="navigator" class="container fixed-top">
+  <nav class="navbar navbar-expand-md navbar-light">
+      <a class="navbar-brand" href="#"><img class="img1" [src]="imagemHeader" alt=" {{altImg}}" > </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="#"><img class="img1" [src]="imagemHeader" alt=" {{altImg}}" > <!--Para criar uma variavel em alt apenas colocar -> {{ alguma coisa aqui dentro especificando bem o que é}}-->
-          </a>
-          
-          <div class="my-2 my-lg-0">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </div>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mr-auto">
+              
+          </ul>
+          <ul class="navbar-nav"><li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">O que fazemos</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Quem Somos</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Projetos</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Contato</a>
+        </li>
+          </ul>
+      </div>
+  </nav>
 </div>
+  
