alteraçoes no footer, alt das imagem

--- a/src/app/components/quem-somos/quem-somos.component.html
+++ b/src/app/components/quem-somos/quem-somos.component.html
@@ -7,7 +7,7 @@
             </div>
             <div class="content-qs">
                 <div class="box-qs1">
-                    <img src="./assets/images/sucesso.jpg">
+                    <img src="./assets/images/sucesso.jpg" alt="Foto da Daniela Telles, ao lado um texto sobre sua biografia">
                 </div>
                 <div class="box-qs2">
                     <div class="description">
