--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -30,3 +30,7 @@
 .fa-gem, .fa-print, .fa-phone, .fa-envelope, .fa-home {
     margin: 5px;
 }
+.col-md-4 {
+    white-space: nowrap;
+    text-align: initial;
+}
