--- a/src/app/servicos/servicos.component.html
+++ b/src/app/servicos/servicos.component.html
@@ -10,7 +10,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="card text-white card-has-bg click-col" style="background-image:url('https://source.unsplash.com/600x900/?tree,nature');">
-                                <img class="card-img d-none" src="https://source.unsplash.com/600x900/?tree,nature" alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
+                                <img class="card-img d-none" src="https://source.unsplash.com/600x900/?tree,nature" alt="Primeira imagem da parte serviços do site mais sustentabilidade, estamos explicando O que fazemos.">
                                 <div class="card-img-overlay d-flex flex-column">
                                     <div class="card-body">
                                         <small class="card-meta mb-2">inovaçao e criatividade</small>
@@ -22,7 +22,7 @@
                         </div> 
                         <div class="col-6">
                             <div class="card text-white card-has-bg click-col" style="background-image:url('https://source.unsplash.com/600x900/?tech,street');">
-                                <img class="card-img d-none" src="https://source.unsplash.com/600x900/?tech,street" alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
+                                <img class="card-img d-none" src="https://source.unsplash.com/600x900/?tech,street" alt="Segunda imagem da parte serviços do site mais sustentabilidade, estamos explicando O que fazemos.">
                                 <div class="card-img-overlay d-flex flex-column">
                                     <div class="card-body">
                                         <small class="card-meta mb-2">Mais Sustentabilidade</small>
@@ -43,7 +43,7 @@
                         </div>
                         <div class="col-6">
                             <div class="card text-white card-has-bg click-col" style="background-image:url('https://source.unsplash.com/600x900/?computer,design');">
-                                <img class="card-img d-none" src="https://source.unsplash.com/600x900/?computer,design" alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
+                                <img class="card-img d-none" src="https://source.unsplash.com/600x900/?computer,design" alt="Terceira imagem da parte serviços do site mais sustentabilidade, estamos explicando O que fazemos.">
                                 <div class="card-img-overlay d-flex flex-column">
                                     <div class="card-body">
                                         <small class="card-meta mb-2">Em alta no mercado 2022</small>
