--- a/src/app/shared/components/banner/banner.component.html
+++ b/src/app/shared/components/banner/banner.component.html
@@ -2,7 +2,7 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item  active">
-            <img class="d-block w-100" src="../../../assets/images/banner.jpg" alt="First slide">
+            <img class="d-block w-100" src="../../../assets/images/banner.jpg" alt="Primeira imagem do banner, site mais sustentabilidade">
             <div class="row">
               <div class="col-12">
                 <div class="carousel-caption d-none d-md-block">
@@ -13,11 +13,11 @@
           </div>
 
           <div class="carousel-item">
-            <img class="d-block w-100" src="../../../assets/images/banner.jpg" alt="Second slide">
+            <img class="d-block w-100" src="../../../assets/images/banner.jpg" alt="segunda imagem do banner, site mais sustentabilidade">
           </div>
 
           <div class="carousel-item">
-            <img class="d-block w-100" src="../../../assets/images/banner.jpg" alt="Third slide">
+            <img class="d-block w-100" src="../../../assets/images/banner.jpg" alt="terceira imagem do banner, site mais sustentabilidade">
           </div>
 
         </div>
