--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -91,8 +91,8 @@
   </section>
     <!-- Copyright --> 
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-      © 2021 Copyright ->
-      <a class="text-reset fw-bold" href="https://www.helptask.com.br/quemsomos">Helptask.com</a>
+      @ 2021 Copyright | Todos os direitos reservado há 
+      <a class="text-reset fw-bold" href="https://www.helptask.com.br/quemsomos">Helptask Sistema e soluções</a>
     </div>
     <!-- Copyright -->
   </footer>
@@ -151,7 +151,7 @@
                                         <div class="input-group-prepend">
                                             <div class="input-group-text"><i class="fa fa-comment text-info"></i></div>
                                         </div>
-                                        <textarea class="form-control" placeholder="enviar sua mensagem" required></textarea>
+                                        <textarea class="form-control" placeholder="envie sua mensagem" required></textarea>
                                     </div>
                                 </div>
 
