--- a/src/app/shared/components/project/project.component.html
+++ b/src/app/shared/components/project/project.component.html
@@ -7,66 +7,66 @@
     <div class="row">
         <div class="col-3">
            <div class="teste1">
-              <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+              <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg" alt="Primeira imagem de planos para projetos futuros">
            </div>
         </div>
         <div class="col-3">
          <div class="teste1">
-            <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+            <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg" alt="Segunda imagem, essa imagem ilustra um dos nossos projeto que está no papel, temos à finalidade de organizar e tirar ele do papel em um fututo proximo">
          </div>
       </div>
       <div class="col-3">
          <div class="teste1">
-            <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+            <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg" alt="terceira imagem simbolizando o projeto que estamos desenvolvendo">
          </div>
       </div>
       <div class="col-3">
          <div class="teste1">
-            <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+            <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg" alt="Quarta imagem do nosso projeto que esta sendo desenvolvido pela equipe nossa">
          </div>
       </div>
     </div>
     <div class="row">
       <div class="col-3">
          <div class="teste1">
-            <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+            <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg" alt="Lorem ipsum dolor sit amet">
          </div>
       </div>
       <div class="col-3">
        <div class="teste1">
-          <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+          <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg" alt="Lorem ipsum dolor sit amet">
        </div>
     </div>
     <div class="col-3">
       <div class="teste1">
-         <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+         <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg" alt="Lorem ipsum dolor sit amet">
       </div>
    </div>
    <div class="col-3">
       <div class="teste1">
-         <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+         <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg" alt="Lorem ipsum dolor sit amet">
       </div>
    </div>
   </div>
   <div class="row">
    <div class="col-3">
       <div class="teste1">
-         <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+         <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg" alt="Lorem ipsum dolor sit amet">
       </div>
    </div>
    <div class="col-3">
     <div class="teste1">
-       <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+       <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg" alt="Lorem ipsum dolor sit amet">
     </div>
  </div>
  <div class="col-3">
    <div class="teste1">
-      <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+      <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg" alt="Lorem ipsum dolor sit amet">
    </div>
 </div>
 <div class="col-3">
    <div class="teste1">
-      <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg">
+      <img src="https://cdn-static.findly.com/wp-content/uploads/sites/584/2018/05/nafta_driver-220x220.jpg" alt="Lorem ipsum dolor sit amet">
    </div>
 </div>
 </div>
