Ajuste do header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<app-banner></app-banner>
 <app-logo></app-logo>
 <app-servicos></app-servicos>
 <app-quem-somos></app-quem-somos>
