--- a/src/app/shared/components/navigator/navigator.component.html
+++ b/src/app/shared/components/navigator/navigator.component.html
@@ -1,6 +1,6 @@
-<div id="navigator" class="container fixed-top">
+<div id="navigator" class="container">
   <nav class="navbar navbar-expand-md navbar-light">
-      <a class="navbar-brand" href="#"><img class="img1" [src]="imagemHeader" alt=" {{altImg}}" > </a>
+      <a class="navbar-brand" href="#"><img class="logotipo" [src]="imagemHeader" alt=" {{altImg}}" > </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
       </button>
