--- a/src/app/shared/components/navigator/navigator.component.scss
+++ b/src/app/shared/components/navigator/navigator.component.scss
@@ -1,8 +1,13 @@
 
-.img1 {
-    width: 100px;
+.logotipo {
+    width: 25%;
     height: 0 auto;
 }
-.navigator{
+#navigator{
     background: #fff;
+    padding: 0.5% 0;
+}
+
+.navbar {
+    padding: 0;
 }
